--- a/data/settings.json
+++ b/data/settings.json
@@ -1,6 +1,7 @@
 {
     "directory_path": "../data/",
     "active_files": [],
+    "display_item": 0,
     "font_size": 44,
     "typeface": "Verdana",
     "current_theme": "Default",
